[package]
name = "summit"
version = "0.1.0-dev"
description = "Summit is a pre-release Celeste map editor, currently in development."
license = "MIT"
edition = "2021"
authors = ["Akitain"]

[dependencies]
eframe = "0.19.0"
egui = "0.19.0"
dirs = "4.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rfd = "0.13"  # Simple file dialog library
image = "0.24.2"
shellexpand = "2.1.0"
cairn = { git = "https://github.com/Aqu1tain/cairn.git" }
byteorder = "1.4"
quick-xml = "0.31"
lazy_static = "1.4"
once_cell = "1.19"
# Explicitly add latest winit for compatibility with rfd
winit = "0.28"